--- a/src/client/templates/index.html
+++ b/src/client/templates/index.html
@@ -3,11 +3,9 @@
 {% block content %}
 
     <div class="page-header text-center">
-        <h1><span class="fa fa-check-square-o"></span> {{ app_name }}</h1>
+        <h1><span class="fa fa-check-square-o"></span> Garminello (beta)</h1>
 		<h3>Trello on your Garmin device</h3>
     </div>
-
-
 
     <div class="text-center">
         <div class="row">
