New images and copy on index page

--- a/src/client/less/index.less
+++ b/src/client/less/index.less
@@ -11,6 +11,14 @@ h1, h3 {
 	color: #00436a;
 }
 
+p {
+	font-size: 1.3em;
+}
+
+ul {
+	font-size: 1.3em;	
+}
+
 .main-nav {
 	float: left;
 	margin-top: 20px;
@@ -43,7 +51,8 @@ h1, h3 {
 	display: block;
 	float: left;
 	max-width: 300px;
-	padding: 20px;
+	padding: 10px;
+	margin: 10px;
 	border: 1px solid #2e6da4;
     border-radius: 4px;
     img {
