--- a/src/client/templates/index.html
+++ b/src/client/templates/index.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <h3>1. Install the app</h3>
-                <a class="btn btn-lg btn-primary" href="http://apps.garmin.com"><span class="fa fa-external-link"></span> Install</a>
+                <a class="btn btn-lg btn-primary" href="https://apps.garmin.com/en-US/apps/da6ba406-488c-4f10-83d4-3e70507d4656"><span class="fa fa-external-link"></span> Install</a>
             </div>
             <div class="col-sm-6">
                 {% if isAuthenticated %}
