--- a/src/client/less/index.less
+++ b/src/client/less/index.less
@@ -77,3 +77,14 @@ ul {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+
+footer {
+	padding: 20px 0;
+	ul {
+		li {
+			margin-right: 20px;
+			display: inline;
+		}
+	}
+}
