--- a/src/client/templates/layouts/default.html
+++ b/src/client/templates/layouts/default.html
@@ -50,7 +50,12 @@
 
             <footer>
                 <div class="text-center">
-                    2016, by <a href="">Tomasz Kustrzynski</a>
+                <ul>
+                    <li>2016, by <a href="">Tomasz Kustrzynski</a></li>
+                    <li><a href="/privacy">Privacy Policy</a></li>
+                    <li><a target="_blank" href="https://apps.garmin.com/en-US/apps/da6ba406-488c-4f10-83d4-3e70507d4656">IQ Connect Store</a>
+                    <li><a target="_blank" href="https://github.com/fikander/garminello-web">github repository</a></li>
+                </ul>
                 </div>
             </footer>
         </div>
