Add sample Trello workouts board

--- a/src/client/templates/index.html
+++ b/src/client/templates/index.html
@@ -94,6 +94,14 @@
             <a target="blank" href="/static/images/app_diagram.png"><img src="/static/images/app_diagram.png" style="width:100%;"/></a>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>Example Trello board with Workouts</h3>
+            <p>This is a public board, so you can <a target="_blank" href="https://trello.com/b/SOCdcatH">join and add it to your Trello account</a>. This will make it visible in the Garmin device.</p>
+            <iframe src="https://trello.com/b/SOCdcatH.html"></iframe>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
